--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/node": "^12.11.1",
+    "serialize-javascript": "^2.1.2",
     "ts-loader": "^6.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
